added bouncing arrow to bottom of landing view

--- a/FR_index.html
+++ b/FR_index.html
@@ -56,6 +56,11 @@
                 </div>
             </div>
         </div>
+        <div id="container">
+            <div id="arrow-down">
+                <i class="fas fa-chevron-down"></i>
+            </div>
+        </div>
     </div>
 
     <!---------ABOUT ME---------->
