--- a/index.html
+++ b/index.html
@@ -51,7 +51,11 @@
             <br>
             <h1 class='name'>Haley Schafer</h1>
             <p class='title'>Full-Stack Software Developer</p>
-
+        </div>
+        <div id="container">
+            <div id="arrow-down">
+                <i class="fas fa-chevron-down"></i>
+            </div>
         </div>
     </div>
 
