--- a/FR_index.html
+++ b/FR_index.html
@@ -52,7 +52,7 @@
             <h1>Haley Schafer</h1>
             <div class="row">
                 <div class="col-xs-hidden col-sm-4 col-md-4">
-                    <p>Full-Stack Développeur d’Application de Web</p>
+                    <p>Full-Stack Développeur d’Applications Web</p>
                 </div>
             </div>
         </div>
@@ -72,14 +72,14 @@
                 <h2>À Propos</h2>
                 <br>
                 <div class="col-xs-hidden col-sm-6">
-                    <p id='about-p'>Je suis expérimentée dans le domaine de la vente et dans la gestion client dans l'industrie informatique. Orientant ma carrière vers le dévelopement logiciel, je viens d'être diplomée de Code Institute en front-end et back-end. Je
+                    <p id='about-p'>Je suis expérimentée dans le domaine de la vente et dans la gestion client dans l'industrie informatique. Orientant ma carrière vers le dévelopement de logiciel, je viens d'être diplomée du Code Institute à Dublin en front-end et back-end. Je
                         me spécialise dans le développement d'application web.</p>
                     <br>
-                    <p id='about-p' class='hidden-sm'> Je travaille avec les frameworks Flask et Django (Python), ainsi que languages HTML, CSS et JavaScript. Passionnée par la création d'une expérience utilisateur la plus agréable possible, j'apprécie m'approprier continuellement les
+                    <p id='about-p' class='hidden-sm'> Je travaille avec les frameworks Flask et Django (Python), ainsi que les languages HTML, CSS et JavaScript. Passionnée par la création d'une expérience utilisateur la plus agréable possible, j'aime continuellement découvrir et m'approprier les
                         technologies les plus récentes.</p>
                 </div>
                 <div class="col-xs-hidden col-sm-6">
-                    <p id='about-p' class='hidden-xs hidden-md hidden-lg'> Je travaille avec les frameworks Flask et Django (Python), ainsi que languages HTML, CSS et JavaScript. Passionnée par la création d'une expérience utilisateur la plus agréable possible, j'apprécie m'approprier continuellement les
+                    <p id='about-p' class='hidden-xs hidden-md hidden-lg'> Je travaille avec les frameworks Flask et Django (Python), ainsi que languages HTML, CSS et JavaScript. Passionnée par la création d'une expérience utilisateur la plus agréable possible, j'aime continuellement découvrir et m'approprier les
                         technologies les plus récentes.</p>
                 </div>
                 <br>
@@ -97,7 +97,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Timing Assistant</h5>
                         <h6 class="card-subtitle mb-2 text-muted">Flask, JavaScript, MongoDB</h6>
-                        <p id="card-text">Un chronomètre pour plusieurs sportifs pour la natation et l’athlétisme.</p>
+                        <p id="card-text">Un chronomètre conçu pour les sportifs en particuler pour la natation et l’athlétisme.</p>
                         <div class="row" style='text-align: center; padding-top: 10px;'>
                             <a href="https://timing-assistant.herokuapp.com/" class="card-link" target="_blank"><i class="fas fa-desktop" id='desktop-icon'></i></a>
                             <a href="https://github.com/hschafer2017/Sports-Multi-timer-Assistant" class="card-link" target="_blank"><i class="fab fa-github" id='github-icon'></i></a>
@@ -136,7 +136,7 @@
                     <div id="card-text">
                         <h5 class="card-title">Bop It! Game</h5>
                         <h6 class="card-subtitle mb-2 text-muted">JavaScript, jQuery, HTML</h6>
-                        <p id="card-text">Inspiré par le jeu d’enfants, et optimisé pour l’ordinateur et le mobile.</p>
+                        <p id="card-text">Inspiré par le jeu d’enfants, et optimisé pour une utilisation ordinateur et mobile.</p>
                         <div class="row" style='text-align: center; padding-top: 10px;'>
                             <a href="https://hschafer2017.github.io/Stream-Two-Project/" class="card-link" target="_blank"><i class="fas fa-desktop" id='desktop-icon'></i></a>
                             <a href="https://github.com/hschafer2017/Stream-Two-Project" class="card-link" target="_blank"><i class="fab fa-github" id='github-icon'></i></a>
@@ -149,7 +149,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Portfolio Site</h5>
                         <h6 class="card-subtitle mb-2 text-muted">HTML, CSS, Bootstrap</h6>
-                        <p id="card-text">Un site statique à presenter les projets pour les employeurs prospectifs.</p>
+                        <p id="card-text">Un site statique à presenter les projets pour les employeurs prospectifs</p>
                         <div class="row" style='text-align: center; padding-top: 10px;'>
                             <a href="https://hschafer2017.github.io/HSCHAFER-Portfolio/" class="card-link" target="_blank"><i class="fas fa-desktop" id='desktop-icon'></i></a>
                             <a href="https://github.com/hschafer2017/HSCHAFER-Portfolio" class="card-link" target="_blank"><i class="fab fa-github" id='github-icon'></i></a>
@@ -162,7 +162,7 @@
                     <div class="card-body">
                         <h5 class="card-title">World Wide Weather</h5>
                         <h6 class="card-subtitle mb-2 text-muted">JavaScript, API, HTML, CSS</h6>
-                        <p id="card-text">Utilisant un API, rechercher le data du météo actuel pour votre ville.</p>
+                        <p id="card-text">Utilisant un API, recherche les données météo actuelles pour votre ville.</p>
                         <div class="row" style='text-align: center; padding-top: 10px;'>
                             <a href="https://hschafer2017.github.io/Weather-Search-API/" class="card-link" target="_blank"><i class="fas fa-desktop" id='desktop-icon'></i></a>
                             <a href="https://github.com/hschafer2017/Weather-Search-API" class="card-link" target="_blank"><i class="fab fa-github" id='github-icon'></i></a>
@@ -251,7 +251,6 @@
                 </div>
                 <br>
                 <br>
-
                 <br>
                 <br>
             </div>
