linked up downwards arrow with page scroll

--- a/FR_index.html
+++ b/FR_index.html
@@ -58,7 +58,7 @@
         </div>
         <div id="container">
             <div id="arrow-down">
-                <i class="fas fa-chevron-down"></i>
+                <a href='#about' class='page-scroll' id='scroll-button'><i class="fas fa-chevron-down"></i></a>
             </div>
         </div>
     </div>
