--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
         <div id="container">
             <div id="arrow-down">
-                <i class="fas fa-chevron-down"></i>
+                <a href='#about' class='page-scroll' id='scroll-button'><i class="fas fa-chevron-down"></i></a>
             </div>
         </div>
     </div>
