--- a/index.html
+++ b/index.html
@@ -14,53 +14,46 @@
 </head>
 
 <body>
-
-
-    <!------------TOP JUMBOTRON/NAVBAR------------>
-    <div class="jumbotron landing-view-section">
-        <nav class="navbar navbar-masthead navbar-default navbar-fixed-top">
-            <div class="container" style="text-align: right;
-    margin-right: 1%;
-    margin-top: 1%;">
-                <div class="navbar-header">
-                    <a href="FR_index.html" class='language'>fr</a>
-                    <button id='scroll-button' type="button" class="navbar-toggle collapsed " data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-
-
+    <!--********TOP JUMBOTRON/NAVBAR=*******-->
+    <header class="jumbotron" id="landing-view">
+            <nav class="navbar navbar-masthead navbar-default navbar-fixed-top">
+                <div class="container">
+                    <div class="navbar-header">
+                        <a href="FR_index.html" class='language'>fr</a>
+                        <button id='scroll-button' type="button" class="navbar-toggle collapsed " data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                    </div>
+                    <div id="navbar" class="navbar-collapse collapse">
+                        <ul class="nav navbar-nav navbar-right">
+                            <li><a class='page-scroll' href="#about">About</a></li>
+                            <li><a class='page-scroll' href="#work">Work</a></li>
+                            <li><a class='page-scroll' href="#skills">Skills</a></li>
+                            <li><a class='page-scroll' href="#contact">Contact</a></li>
+                            <li><a href="assets/cv/SCHAFER_JuniorDevCV.pdf" target='_blank'>CV</a></li>
+                        </ul>
+                    </div>
                 </div>
-                <div id="navbar" class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a class='page-scroll' href="#about">About</a></li>
-                        <li><a class='page-scroll' href="#work">Work</a></li>
-                        <li><a class='page-scroll' href="#skills">Skills</a></li>
-                        <li><a class='page-scroll' href="#contact">Contact</a></li>
-                        <li><a href="assets/images/SCHAFER_JuniorDevCV.pdf" target='_blank'>CV</a></li>
-                    </ul>
-
+            </nav>
+            <div class="container top">
+                <br>
+                <br>
+                <br>
+                <h1 class='name'>Haley Schafer</h1>
+                <p class='title'>Full-Stack Software Developer</p>
+            </div>
+            <div id="container">
+                <div id="arrow-down">
+                    <a href='#about' class='page-scroll'><i class="fas fa-chevron-down"></i></a>
                 </div>
             </div>
-        </nav>
-        <div class="container top">
-            <br>
-            <br>
-            <br>
-            <h1 class='name'>Haley Schafer</h1>
-            <p class='title'>Full-Stack Software Developer</p>
-        </div>
-        <div id="container">
-            <div id="arrow-down">
-                <a href='#about' class='page-scroll' id='scroll-button'><i class="fas fa-chevron-down"></i></a>
-            </div>
-        </div>
-    </div>
+    </header>
 
-    <!---------ABOUT ME---------->
-    <div class="about-me-section">
+    <!--******-ABOUT ME*******-->
+    <section id="about-me">
         <div class="container about-row">
             <div class="row" id='about'>
                 <br>
@@ -69,31 +62,31 @@
                 <br>
             </div>
             <div class="col-xs-hidden col-sm-6">
-                <p id='about-p'>I am experienced in sales and tech industry-focused client management. Transitioning into software development, I am a recent graduate of Code Institute working with front-end and back-end frameworks. </p>
+                <p class='about-p'>I am experienced in sales and tech industry-focused client management. Transitioning into software development, I am a recent graduate of Code Institute working with front-end and back-end frameworks. </p>
                 <br>
-                <p id='about-p' class='hidden-sm'>I specialise in HTML, CSS, JavaScript, and Python languages, using Django and Flask frameworks. Passionate about creating a positive user experience, I enjoy working with and adapting to technologies as they develop. </p>
+                <p class='about-p hidden-sm'>I specialise in HTML, CSS, JavaScript, and Python languages, using Django and Flask frameworks. Passionate about creating a positive user experience, I enjoy working with and adapting to technologies as they develop. </p>
             </div>
             <div class="col-xs-hidden col-sm-6">
-                <p id='about-p' class='hidden-xs hidden-md hidden-lg'>I specialise in HTML, CSS, JavaScript, and Python languages, using Django and Flask frameworks. Passionate about creating a positive user experience, I enjoy working with and adapting to technologies as they develop. </p>
+                <p class='about-p hidden-xs hidden-md hidden-lg'>I specialise in HTML, CSS, JavaScript, and Python languages, using Django and Flask frameworks. Passionate about creating a positive user experience, I enjoy working with and adapting to technologies as they develop. </p>
             </div>
             <br>
             <br>
         </div>
         <br>
         <br>
-    </div>
-    <!--------------WORK------------->
-    <div class="jumbotron work-section">
-        <div class="container" id='work'>
+    </section>
+    <!--***********WORK********-->
+    <section class="jumbotron scroll" id="work">
+        <div class="container">
             <div class="col-xs-6 col-sm-4 project-cards">
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Timing Assistant</h5>
                         <h6 class="card-subtitle mb-2 text-muted">Flask, JavaScript, MongoDB</h6>
-                        <p id="card-text">A stopwatch to time multiple athletes simultaneously in swimming and track.</p>
-                        <div class="row" style='text-align: center; padding-top: 10px;'>
-                            <a href="https://timing-assistant.herokuapp.com/" class="card-link" target="_blank"><i class="fas fa-desktop" id='desktop-icon'></i></a>
-                            <a href="https://github.com/hschafer2017/Sports-Multi-timer-Assistant" class="card-link" target="_blank"><i class="fab fa-github" id='github-icon'></i></a>
+                        <p class="card-text">A stopwatch to time multiple athletes simultaneously in swimming and track.</p>
+                        <div class="row">
+                            <a href="https://timing-assistant.herokuapp.com/" class="card-link" target="_blank"><i class="fas fa-desktop desktop-icon"></i></a>
+                            <a href="https://github.com/hschafer2017/Sports-Multi-timer-Assistant" class="card-link" target="_blank"><i class="fab fa-github github-icon"></i></a>
                         </div>
                     </div>
                 </div>
@@ -103,36 +96,36 @@
                     <div class="card-body">
                         <h5 class="card-title">PC Swimming</h5>
                         <h6 class="card-subtitle mb-2 text-muted">Django, Python, AWS </h6>
-                        <p id="card-text">An e-commerce site for PC Swimming and Diving for swimmers and alumni.</p>
-                        <div class="row" style='text-align: center; padding-top: 10px;'>
-                            <a href="https://pcswimming-project.herokuapp.com/" class="card-link" target="_blank"><i class="fas fa-desktop" id='desktop-icon'></i></a>
-                            <a href="https://github.com/hschafer2017/PCSwimming" class="card-link" target="_blank"><i class="fab fa-github" id='github-icon'></i></a>
+                        <p class="card-text">An e-commerce site for PC Swimming and Diving for swimmers and alumni.</p>
+                        <div class="row">
+                            <a href="https://pcswimming-project.herokuapp.com/" class="card-link" target="_blank"><i class="fas fa-desktop desktop-icon"></i></a>
+                            <a href="https://github.com/hschafer2017/PCSwimming" class="card-link" target="_blank"><i class="fab fa-github github-icon"></i></a>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="col-xs-6 col-sm-4 project-cards">
                 <div class="card">
-                    <div id="card-text">
+                    <div class="card-body">
                         <h5 class="card-title">Give A GIF</h5>
                         <h6 class="card-subtitle mb-2 text-muted">RESTful API, JavaScript, Flask, Python</h6>
-                        <p id="card-text">A random GIF generator using an API and a backend.</p>
-                        <div class="row" style='text-align: center; padding-top: 10px;'>
-                            <a href="https://hschafer2017.github.io/Give-A-GIF/" class="card-link" target="_blank"><i class="fas fa-desktop" id='desktop-icon'></i></a>
-                            <a href="https://github.com/hschafer2017/Give-A-GIF" class="card-link" target="_blank"><i class="fab fa-github" id='github-icon'></i></a>
+                        <p class="card-text">A random GIF generator using an API and a backend.</p>
+                        <div class="row">
+                            <a href="https://hschafer2017.github.io/Give-A-GIF/" class="card-link" target="_blank"><i class="fas fa-desktop desktop-icon"></i></a>
+                            <a href="https://github.com/hschafer2017/Give-A-GIF" class="card-link" target="_blank"><i class="fab fa-github github-icon"></i></a>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="col-xs-6 col-sm-4 project-cards">
                 <div class="card">
-                    <div id="card-text">
+                    <div class="card-body">
                         <h5 class="card-title">Bop It! Game</h5>
                         <h6 class="card-subtitle mb-2 text-muted">JavaScript, jQuery, HTML</h6>
-                        <p id="card-text">Inspired by the children's game, optimised for desktop and mobile.</p>
-                        <div class="row" style='text-align: center; padding-top: 10px;'>
-                            <a href="https://hschafer2017.github.io/Stream-Two-Project/" class="card-link" target="_blank"><i class="fas fa-desktop" id='desktop-icon'></i></a>
-                            <a href="https://github.com/hschafer2017/Stream-Two-Project" class="card-link" target="_blank"><i class="fab fa-github" id='github-icon'></i></a>
+                        <p class="card-text">Inspired by the children's game, optimised for desktop and mobile.</p>
+                        <div class="row">
+                            <a href="https://hschafer2017.github.io/Stream-Two-Project/" class="card-link" target="_blank"><i class="fas fa-desktop desktop-icon"></i></a>
+                            <a href="https://github.com/hschafer2017/Stream-Two-Project" class="card-link" target="_blank"><i class="fab fa-github github-icon"></i></a>
                         </div>
                     </div>
                 </div>
@@ -142,10 +135,10 @@
                     <div class="card-body">
                         <h5 class="card-title">Portfolio Site</h5>
                         <h6 class="card-subtitle mb-2 text-muted">HTML, CSS, Bootstrap</h6>
-                        <p id="card-text">A static website to showcase developer projects for prospective employers.</p>
-                        <div class="row" style='text-align: center; padding-top: 10px;'>
-                            <a href="https://hschafer2017.github.io/HSCHAFER-Portfolio/" class="card-link" target="_blank"><i class="fas fa-desktop" id='desktop-icon'></i></a>
-                            <a href="https://github.com/hschafer2017/HSCHAFER-Portfolio" class="card-link" target="_blank"><i class="fab fa-github" id='github-icon'></i></a>
+                        <p class="card-text">A static website to showcase developer projects for prospective employers.</p>
+                        <div class="row">
+                            <a href="https://hschafer2017.github.io/HSCHAFER-Portfolio/" class="card-link" target="_blank"><i class="fas fa-desktop desktop-icon"></i></a>
+                            <a href="https://github.com/hschafer2017/HSCHAFER-Portfolio" class="card-link" target="_blank"><i class="fab fa-github github-icon"></i></a>
                         </div>
                     </div>
                 </div>
@@ -155,21 +148,20 @@
                     <div class="card-body">
                         <h5 class="card-title">World Wide Weather</h5>
                         <h6 class="card-subtitle mb-2 text-muted">JavaScript, API, HTML, CSS</h6>
-                        <p id="card-text">Using an API, search for the current weather data for a location.</p>
-                        <div class="row" style='text-align: center; padding-top: 10px;'>
-                            <a href="https://hschafer2017.github.io/Weather-Search-API/" class="card-link" target="_blank"><i class="fas fa-desktop" id='desktop-icon'></i></a>
-                            <a href="https://github.com/hschafer2017/Weather-Search-API" class="card-link" target="_blank"><i class="fab fa-github" id='github-icon'></i></a>
+                        <p class="card-text">Using an API, search for the current weather data for a location.</p>
+                        <div class="row">
+                            <a href="https://hschafer2017.github.io/Weather-Search-API/" class="card-link" target="_blank"><i class="fas fa-desktop desktop-icon"></i></a>
+                            <a href="https://github.com/hschafer2017/Weather-Search-API" class="card-link" target="_blank"><i class="fab fa-github github-icon"></i></a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-
-    <!------------SKILLS------------>
-    <div class="skills-section">
+    </section>
+    <!--******SKILLS*******-->
+    <section id="skills">
         <div class="container skills">
-            <div class="row skills-row" id='skills'>
+            <div class="row skills-row">
                 <br>
                 <br>
                 <h2>Skills</h2>
@@ -244,19 +236,18 @@
                 </div>
                 <br>
                 <br>
-
                 <br>
                 <br>
             </div>
         </div>
-    </div>
-    <!---------CONTACT--------->
-    <div class="jumbotron contact-section">
-        <div class="container" id='contact'>
+    </section>
+    <!--*****CONTACT*****-->
+    <section class="jumbotron scroll" id="contact">
+        <div class="container">
             <div class="col-sm-6"></div>
             <div class="col-xs-12 col-sm-6 contact-form">
                 <br>
-                <h2 id='contact-head'>Contact</h2>
+                <h2 id="contact-head">Contact</h2>
                 <br>
                 <form>
                     <div class="row">
@@ -267,7 +258,7 @@
                     <br>
                     <div class="row">
                         <div class="form-group">
-                            <input type="text" class="form-control" id="exampleInputPhone" name='Phone' placeholder="Phone">
+                            <input type="text" class="form-control" id="exampleInputPhone" name='Phone' placeholder="Phone" required>
                         </div>
                     </div>
                     <br>
@@ -287,26 +278,22 @@
                 </form>
             </div>
         </div>
-    </div>
-
-    <!---------FOOTER--------->
+    </section>
+    <!--*****FOOTER******-->
     <footer>
         <div class="container">
             <div class="row foot">
                 <div class="col-xs-12 col-sm-12 icons">
-                    <a href="https://www.linkedin.com/in/haleyschafer" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                    <a href="https://www.github.com/hschafer2017" target="_blank"><i class="fab fa-github"></i></a>
-                    <a href="assets/images/SCHAFER_JuniorDevCV.pdf" download><i class="fas fa-file-download"></i></a>
-                    <a href="https://medium.com/@haleyschafer" style='padding-right: 0px' target="_blank"><i class="fab fa-medium-m"></i></a>
+                    <a href="https://www.linkedin.com/in/haleyschafer" target="_blank"><i class="fab fa-linkedin-in alignment"></i></a>
+                    <a href="https://www.github.com/hschafer2017" target="_blank"><i class="fab fa-github alignment"></i></a>
+                    <a href="assets/cv/SCHAFER_JuniorDevCV.pdf" download><i class="fas fa-file-download alignment"></i></a>
+                    <a href="https://medium.com/@haleyschafer" target="_blank"><i class="fab fa-medium-m alignment"></i></a>
                 </div>
             </div>
         </div>
     </footer>
-
-    <script type="text/javascript" src="./libraries/jquery.min.js"></script>
-    <script type="text/javascript" src="./libraries/bootstrap.min.js"></script>
-    <script type="text/javascript" src="assets/js/index.js"></script>
-
+    <script src="./libraries/jquery.min.js"></script>
+    <script src="./libraries/bootstrap.min.js"></script>
+    <script src="assets/js/index.js"></script>
 </body>
-
 </html>
