--- a/FR_index.html
+++ b/FR_index.html
@@ -38,9 +38,6 @@
             </div>
         </nav>
         <div class="container top">
-            <br>
-            <br>
-            <br>
             <h1>Haley Schafer</h1>
             <div class="row">
                 <div class="col-xs-hidden col-sm-4 col-md-4">
@@ -59,14 +56,9 @@
         <div class="about-me-section">
             <div class="container about-row">
                 <div class="row" id='about'>
-                    <br>
-                    <br>
                     <h2>À Propos</h2>
-                    <br>
                     <div class="col-xs-hidden col-sm-6">
-                        <p class='about-p'>Je suis expérimentée dans le domaine de la vente et dans la gestion client dans l'industrie informatique. Orientant ma carrière vers le dévelopement de logiciel, je viens d'être diplomée du Code Institute à Dublin en front-end et back-end. Je
-                            me spécialise dans le développement d'application web.</p>
-                        <br>
+                        <p class='about-p'>Je suis expérimentée dans le domaine de la vente et dans la gestion client dans l'industrie informatique. Orientant ma carrière vers le dévelopement de logiciel, je viens d'être diplomée du Code Institute à Dublin en front-end et back-end. Je me spécialise dans le développement d'application web.</p>
                         <p class='about-p hidden-sm'> Je travaille avec les frameworks Flask et Django (Python), ainsi que les languages HTML, CSS et JavaScript. Passionnée par la création d'une expérience utilisateur la plus agréable possible, j'aime continuellement découvrir et m'approprier les
                             technologies les plus récentes.</p>
                     </div>
@@ -74,11 +66,7 @@
                         <p class='about-p hidden-xs hidden-md hidden-lg'> Je travaille avec les frameworks Flask et Django (Python), ainsi que languages HTML, CSS et JavaScript. Passionnée par la création d'une expérience utilisateur la plus agréable possible, j'aime continuellement découvrir et m'approprier les
                             technologies les plus récentes.</p>
                     </div>
-                    <br>
-                    <br>
                 </div>
-                <br>
-                <br>
             </div>
         </div>
     </section>
@@ -169,8 +157,6 @@
     <section id="skills">
         <div class="container skills">
             <div class="row skills-row">
-                <br>
-                <br>
                 <h2>Compétences</h2>
             </div>
             <div class="container skills-inner">
@@ -183,7 +169,6 @@
                             <div id='html-load2' class="arc2"></div>
                             <div class="arc1"></div>
                         </div>
-
                     </div>
                 </div>
                 <div class="col-xs-6 col-sm-4 skill-circle">
@@ -241,10 +226,6 @@
                         </div>
                     </div>
                 </div>
-                <br>
-                <br>
-                <br>
-                <br>
             </div>
         </div>
     </section>
@@ -253,29 +234,24 @@
         <div class="container">
             <div class="col-sm-6"></div>
             <div class="col-xs-12 col-sm-6 contact-form">
-                <br>
                 <h2 id='contact-head'>Contacter</h2>
-                <br>
                 <form>
-                    <div class="row">
+                    <div class="row contact">
                         <div class="form-group">
                             <input type="text" class="form-control" id="exampleInputName" name='Name' placeholder="Nom" required>
                         </div>
                     </div>
-                    <br>
-                    <div class="row">
+                    <div class="row contact">
                         <div class="form-group">
                             <input type="text" class="form-control" id="exampleInputPhone" name='Phone' placeholder="Numéro de Téléphone" required>
                         </div>
                     </div>
-                    <br>
-                    <div class="row">
+                    <div class="row contact">
                         <div class="form-group">
                             <input type="email" class="form-control" id="exampleInputEmail1" name='Email' placeholder="Mail" required>
                         </div>
                     </div>
-                    <br>
-                    <div class="row">
+                    <div class="row contact">
                         <div class="form-group message">
                             <textarea class="form-control" name="message" rows="6" placeholder="Message" required></textarea>
                         </div>
