--- a/index.html
+++ b/index.html
@@ -39,9 +39,6 @@
                 </div>
             </nav>
             <div class="container top">
-                <br>
-                <br>
-                <br>
                 <h1 class='name'>Haley Schafer</h1>
                 <p class='title'>Full-Stack Software Developer</p>
             </div>
@@ -56,28 +53,20 @@
     <section id="about-me">
         <div class="container about-row">
             <div class="row" id='about'>
-                <br>
-                <br>
                 <h2>About</h2>
-                <br>
             </div>
             <div class="col-xs-hidden col-sm-6">
                 <p class='about-p'>I am experienced in sales and tech industry-focused client management. Transitioning into software development, I am a recent graduate of Code Institute working with front-end and back-end frameworks. </p>
-                <br>
                 <p class='about-p hidden-sm'>I specialise in HTML, CSS, JavaScript, and Python languages, using Django and Flask frameworks. Passionate about creating a positive user experience, I enjoy working with and adapting to technologies as they develop. </p>
             </div>
             <div class="col-xs-hidden col-sm-6">
                 <p class='about-p hidden-xs hidden-md hidden-lg'>I specialise in HTML, CSS, JavaScript, and Python languages, using Django and Flask frameworks. Passionate about creating a positive user experience, I enjoy working with and adapting to technologies as they develop. </p>
             </div>
-            <br>
-            <br>
         </div>
-        <br>
-        <br>
     </section>
     <!--***********WORK********-->
-    <section class="jumbotron scroll" id="work">
-        <div class="container">
+    <section class="jumbotron "  id="work">
+        <div class="container scroll-work" >
             <div class="col-xs-6 col-sm-4 project-cards">
                 <div class="card">
                     <div class="card-body">
@@ -162,8 +151,6 @@
     <section id="skills">
         <div class="container skills">
             <div class="row skills-row">
-                <br>
-                <br>
                 <h2>Skills</h2>
             </div>
             <div class="container skills-inner">
@@ -176,7 +163,6 @@
                             <div id='html-load2' class="arc2"></div>
                             <div class="arc1"></div>
                         </div>
-
                     </div>
                 </div>
                 <div class="col-xs-6 col-sm-4 skill-circle">
@@ -234,10 +220,6 @@
                         </div>
                     </div>
                 </div>
-                <br>
-                <br>
-                <br>
-                <br>
             </div>
         </div>
     </section>
@@ -246,35 +228,29 @@
         <div class="container">
             <div class="col-sm-6"></div>
             <div class="col-xs-12 col-sm-6 contact-form">
-                <br>
                 <h2 id="contact-head">Contact</h2>
-                <br>
                 <form>
-                    <div class="row">
+                    <div class="row contact">
                         <div class="form-group">
                             <input type="text" class="form-control" id="exampleInputName" name='Name' placeholder="Name" required>
                         </div>
                     </div>
-                    <br>
-                    <div class="row">
+                    <div class="row contact">
                         <div class="form-group">
                             <input type="text" class="form-control" id="exampleInputPhone" name='Phone' placeholder="Phone" required>
                         </div>
                     </div>
-                    <br>
-                    <div class="row">
+                    <div class="row contact">
                         <div class="form-group">
                             <input type="email" class="form-control" id="exampleInputEmail1" name='Email' placeholder="Email" required>
                         </div>
                     </div>
-                    <br>
-                    <div class="row">
+                    <div class="row contact">
                         <div class="form-group message">
                             <textarea class="form-control" name="message" rows="6" placeholder="Message" required></textarea>
                         </div>
                     </div>
-                    <br>
-                    <input type="submit" value='Send' id='contact-btn' class="btn btn-default">
+                    <input type="submit" value='Send' class="btn btn-default">
                 </form>
             </div>
         </div>
