added more descriptive title tags

--- a/FR_index.html
+++ b/FR_index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Nobile" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
-    <title>Haley Schafer Portfolio</title>
+    <title>Haley Schafer Portfolio - Full Stack Developer Dublin</title>
 </head>
 <body>
     <!--********TOP JUMBOTRON/NAVBAR*******-->
